<resources>
    <string name="app_name">Personal Trainer</string>
    <string name="timer_text">0</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="exercise_type_hint">Exercise Type</string>
    <string name="exercises_input_hint">List of exercises (separated by commas)</string>
    <string name="exercise_time_input_hint">Execution time (seconds)</string>
    <string name="rest_time_input_hint">Rest time (seconds)</string>
    <string name="round_interval_input_hint">Round interval (seconds)</string>
    <string name="rounds_input_hint">Number of rounds</string>
    <string name="random_order_checkbox_text">Random exercises</string>
    <string name="save_button_text">Save</string>
    <string name="add_new_set_button_text">Add New Set</string>
    <string name="set_name">Set Name</string>
    <string name="exercises">Exercises</string>
    <string name="exercise_time">Time per exercise</string>
    <string name="rest_time">Rest</string>
    <string name="rounds">Rounds</string>
    <string name="round_interval">Interval between rounds</string>
    <string name="interval">Break Time</string>
    <string name="random_order">Random order</string>
    <string name="starting_in_10_seconds">Starting in 10 seconds!</string>
    <string name="workout_finished">Workout Finished!</string>
    <string name="rest">Rest</string>
    <string name="next_round_soon">Next round soon</string>
    <string name="pause">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="stop_workout_message">Are you sure you want to stop the workout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="workout_sets">Workout Sets</string>
    <string name="speak_error">Error initializing TextToSpeech.</string>
    <string name="beep_error">Error playing beep sound.</string>
    <string name="confirm_stop">Confirm Stop</string>
    <string name="workout_sets_title">Workout Sets</string>
    <string name="toast_selected_set">Workout:</string>
    <string name="dialog_remove_title">Remove Set</string>
    <string name="dialog_remove_message">Are you sure you want to remove the set?</string>
    <string name="dialog_remove_positive">Yes</string>
    <string name="dialog_remove_negative">Cancel</string>
    <string name="toast_set_removed">Set removed</string>
    <string name="swipe_edit_text">Edit</string>
    <string name="swipe_delete_text">Delete</string>
    <string name="config_title">Add/Edit Set</string>
    <string name="error_exercise_type">Please enter the workout type</string>
    <string name="error_exercises_input">Please enter at least one exercise</string>
    <string name="toast_save_success">Settings saved!</string>
    <string name="toast_invalid_values">Please enter valid values!</string>
    <string name="action_workout_sets">Workout Sets</string>
    <string name="workout_set_label">Workout:</string>
    <string name="exercises_label">Exercises:</string>
    <string name="exercise_time_label">Exercise Time:</string>
    <string name="rest_time_label">Rest Time:</string>
    <string name="rounds_label">Rounds:</string>
    <string name="round_interval_label">Round Interval:</string>
    <string name="random_order_label">Random Order:</string>
</resources>