<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/exerciseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/exercise_type_hint"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <!-- Lista de Exercícios -->
        <EditText
            android:id="@+id/exercisesInput"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:gravity="top|start"
            android:hint="@string/exercises_input_hint"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

        <!-- Tempo de Execução -->
        <EditText
            android:id="@+id/exerciseTimeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/exercise_time_input_hint"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <!-- Tempo de Descanso -->
        <EditText
            android:id="@+id/restTimeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/rest_time_input_hint"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <!-- Intervalo entre Rodadas -->
        <EditText
            android:id="@+id/roundIntervalInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/round_interval_input_hint"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <!-- Número de Rodadas -->
        <EditText
            android:id="@+id/roundsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/rounds_input_hint"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <!-- CheckBox para Exercícios Aleatórios -->
        <CheckBox
            android:id="@+id/randomOrderCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/random_order_checkbox_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="HardcodedText,VisualLintButtonSize" />

        <!-- Botão Salvar Configurações -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_500"
            android:padding="16dp"
            android:text="@string/save_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="HardcodedText,TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
